--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
       run: |
         docker exec ubuntu16-arm32-kernel bash -c "
           apt-get update &&
-          apt-get install -y build-essential gcc-arm-linux-gnueabihf bc u-boot-tools libncurses5-dev flex bison &&
+          apt-get install -y build-essential gcc-arm-linux-gnueabihf bc u-boot-tools libncurses5-dev flex bison python2 &&
           apt-get clean
         "
 
