--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,12 @@ jobs:
       run: |
         docker exec ubuntu16-arm32-kernel bash -c "
           apt-get update &&
-          apt-get install -y build-essential gcc-arm-linux-gnueabihf bc u-boot-tools libncurses5-dev flex bison python &&
+          apt-get install -y build-essential gcc-4.8 g++-4.8 gcc-arm-linux-gnueabihf bc u-boot-tools libncurses5-dev flex bison python &&
+          apt install gcc-4.8 g++-4.8 &&
+          update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.8 50 &&
+          update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.8 50 &&
+          update-alternatives --config gcc &&
+          update-alternatives --config g++ &&
           apt-get clean
         "
 
