--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,28 +18,23 @@ jobs:
 
     - name: Set up Docker
       run: |
-        docker run --name ubuntu16-arm32-kernel -dit ubuntu:16.04 bash
+        docker run --name ubuntu12-arm32-kernel -dit tianon/ubuntu:12.04 bash
 
     - name: Install
       run: |
-        docker exec ubuntu16-arm32-kernel bash -c "
+        docker exec ubuntu12-arm32-kernel bash -c "
           apt-get update &&
-          apt-get install -y build-essential gcc-4.8 g++-4.8 gcc-arm-linux-gnueabihf bc u-boot-tools libncurses5-dev flex bison python &&
-          apt install gcc-4.8 g++-4.8 &&
-          update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.8 50 &&
-          update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.8 50 &&
-          update-alternatives --config gcc &&
-          update-alternatives --config g++ &&
+          apt-get install -y build-essential gcc-arm-linux-gnueabihf bc u-boot-tools libncurses5-dev flex bison python &&
           apt-get clean
         "
 
     - name: Copy Source
       run: |
-        docker cp . ubuntu16-arm32-kernel:/kernel-source
+        docker cp . ubuntu12-arm32-kernel:/kernel-source
 
     - name: Build Kernel
       run: |
-        docker exec ubuntu16-arm32-kernel bash -c "
+        docker exec ubuntu12-arm32-kernel bash -c "
           cd /kernel-source &&
           make ARCH=arm CROSS_COMPILE=arm-linux-gnueabihf- clean &&
           make ARCH=arm CROSS_COMPILE=arm-linux-gnueabihf- defconfig &&
@@ -48,11 +43,11 @@ jobs:
 
     - name: Retrieve
       run: |
-        docker cp ubuntu16-arm32-kernel:/kernel-source/arch/arm/boot/zImage ./zImage
+        docker cp ubuntu12-arm32-kernel:/kernel-source/arch/arm/boot/zImage ./zImage
 
     - name: Clean up
       run: |
-        docker rm -f ubuntu16-arm32-kernel
+        docker rm -f ubuntu12-arm32-kernel
 
     - name: Upload Artifact
       uses: actions/upload-artifact@v3
