fix(ci): defconfig

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,7 @@ jobs:
         docker exec ubuntu12-arm32-kernel bash -c "
           cd /kernel-source &&
           make ARCH=arm CROSS_COMPILE=arm-linux-gnueabihf- CFLAGS="-Wno-error -Wno-uninitialized" clean &&
-          make ARCH=arm CROSS_COMPILE=arm-linux-gnueabihf- CFLAGS="-Wno-error -Wno-uninitialized" msm8916_defconfig &&
+          make ARCH=arm CROSS_COMPILE=arm-linux-gnueabihf- CFLAGS="-Wno-error -Wno-uninitialized" defconfig &&
           make ARCH=arm CROSS_COMPILE=arm-linux-gnueabihf- CFLAGS="-Wno-error -Wno-uninitialized" -j$(nproc)
         "
 
