--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,9 +40,11 @@ jobs:
       run: |
         docker exec ubuntu12-arm32-kernel bash -c "
           cd /kernel-source &&
-          make ARCH=arm CROSS_COMPILE=arm-linux-gnueabihf- CFLAGS=-w clean &&
-          make ARCH=arm CROSS_COMPILE=arm-linux-gnueabihf- CFLAGS=-w defconfig &&
-          make ARCH=arm CROSS_COMPILE=arm-linux-gnueabihf- CFLAGS=-w -j$(nproc)
+          echo \$CFLAGS &&
+          echo \$KBUILD_CFLAGS &&
+          make ARCH=arm CROSS_COMPILE=arm-linux-gnueabihf- clean &&
+          make ARCH=arm CROSS_COMPILE=arm-linux-gnueabihf- defconfig &&
+          make ARCH=arm CROSS_COMPILE=arm-linux-gnueabihf- KBUILD_CFLAGS=-w -j$(nproc)
         "
     
     - name: Retrieve
