--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,7 +43,7 @@ jobs:
           echo \$CFLAGS &&
           echo \$KBUILD_CFLAGS &&
           make ARCH=arm CROSS_COMPILE=arm-linux-gnueabihf- clean &&
-          make ARCH=arm CROSS_COMPILE=arm-linux-gnueabihf- msm8916_defconfig &&
+          make ARCH=arm CROSS_COMPILE=arm-linux-gnueabihf- defconfig &&
           make ARCH=arm CROSS_COMPILE=arm-linux-gnueabihf- CFLAGS=-w KBUILD_CFLAGS=-w -j\$(nproc)
         "
         
