--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,6 +40,7 @@ jobs:
       run: |
         docker exec ubuntu12-arm32-kernel bash -c "
           cd /kernel-source &&
+          echo CFLAGS=-w &&
           make ARCH=arm CROSS_COMPILE=arm-linux-gnueabihf- clean &&
           make ARCH=arm CROSS_COMPILE=arm-linux-gnueabihf- defconfig &&
           make ARCH=arm CROSS_COMPILE=arm-linux-gnueabihf- -j$(nproc)
