--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,19 +40,16 @@ jobs:
       run: |
         docker exec ubuntu12-arm32-kernel bash -c "
           cd /kernel-source &&
-          make ARCH=arm CROSS_COMPILE=arm-linux-gnueabihf- clean &&
-          make ARCH=arm CROSS_COMPILE=arm-linux-gnueabihf- msm8916_defconfig &&
-          make ARCH=arm CROSS_COMPILE=arm-linux-gnueabihf- -j$(nproc)
+          mkdir out &&
+          make ARCH=arm O=out CROSS_COMPILE=arm-linux-gnueabihf- clean &&
+          make ARCH=arm O=out CROSS_COMPILE=arm-linux-gnueabihf- msm8916_defconfig &&
+          make ARCH=arm O=out CROSS_COMPILE=arm-linux-gnueabihf- -j$(nproc)
         "
 
     - name: Retrieve Kernel Artifacts
       run: |
         mkdir -p build-artifacts &&
-        docker cp ubuntu12-arm32-kernel:/kernel-source/arch/arm/boot/zImage ./build-artifacts/zImage &&
-        docker cp ubuntu12-arm32-kernel:/kernel-source/arch/arm/boot/Image ./build-artifacts/Image &&
-        docker cp ubuntu12-arm32-kernel:/kernel-source/arch/arm/boot/dts ./build-artifacts/dts &&
-        docker cp ubuntu12-arm32-kernel:/kernel-source/System.map ./build-artifacts/System.map &&
-        docker cp ubuntu12-arm32-kernel:/kernel-source/.config ./build-artifacts/config
+        docker cp ubuntu12-arm32-kernel:/kernel-source/out/* ./build-artifacts/
 
     - name: Clean up
       run: |
