--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,6 +48,7 @@ jobs:
     - name: Retrieve
       run: |
         docker cp ubuntu12-arm32-kernel:/kernel-source/arch/arm/boot/zImage ./zImage
+        docker cp ubuntu12-arm32-kernel:/kernel-source/arch/arm/boot/Image ./Image
 
     - name: Clean up
       run: |
@@ -57,4 +58,4 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: compiled-arm32-kernel
-        path: zImage
+        path: zImage Image
