--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,8 @@ jobs:
     - name: Retrieve
       run: |
         mkdir out
-        docker cp -L ubuntu12-arm32-kernel:/kernel-source/arch/arm/boot ./out
+        docker cp ubuntu12-arm32-kernel:/kernel-source/arch/arm/boot/zImage ./out/zImage
+        docker cp ubuntu12-arm32-kernel:/kernel-source/arch/arm/boot/Image ./out/Image
 
     - name: Clean up
       run: |
